add aboutme window

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -2,34 +2,73 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<section class="min-h-screen bg-[#c07bc0]">
-  <div class="polaroid-outer pt-5">
-    <div class="polaroid-inner justify-self-center">
-      <img src="/profile-pic.jpg" alt="Profile Picture" />
+<section class="min-h-screen bg-[#c07bc0] content-center">
+  <div class="win95-block justify-self-center">
+    <div class="win95-title">
+        <button class="win95-button ml-auto retro-font">x</button>
     </div>
-    <p
-      class="justify-self-center retro-font mt-6 border-b-4 border-dashed border-black"
-    >
-      Emmanuela Zhupa
-    </p>
-  </div>
-  <div class="flex social-buttons">
-    <a href="https://github.com/erelaa" class="social-btn mr-5" target="_blank">
-      <Icon name="github" size={100} />
-    </a>
-    <a
-      href="https://www.linkedin.com/in/emmanuela-zhupa-3ab688210/"
-      class="social-btn mr-5"
-      target="_blank"
-    >
-      <Icon name="linkedin" size={100} />
-    </a>
-    <a href="mailto:em.zhupa@gmail.com" class="social-btn mr-5" target="_blank">
-      <Icon name="mail" size={100} />
-    </a>
-    <a href="tel:+4915788644558" class="social-btn" target="_blank">
-      <Icon name="phone" size={100} />
-    </a>
+    <div class="retro-content flex items-center">
+      <div class="polaroid-outer pt-5 mr-7 ml-3 mt-3 justify-self-center">
+        <div class="polaroid-inner justify-self-center">
+          <img src="/profile-pic.jpg" alt="Profile Picture" />
+        </div>
+        <p
+          class="justify-self-center retro-font mt-6 border-b-4 border-dashed border-black"
+        >
+          Emmanuela Zhupa
+        </p>
+        <div class="flex social-buttons mt-6 mx-2 justify-center">
+          <a
+            href="https://github.com/erelaa"
+            class="social-btn mr-5"
+            target="_blank"
+          >
+            <Icon
+              name="github"
+              size={50}
+              class="justify-self-center relative top-3"
+            />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/emmanuela-zhupa-3ab688210/"
+            class="social-btn mr-5"
+            target="_blank"
+          >
+            <Icon
+              name="linkedin"
+              size={45}
+              class="justify-self-center relative top-3"
+            />
+          </a>
+          <a
+            href="mailto:em.zhupa@gmail.com"
+            class="social-btn mr-5"
+            target="_blank"
+          >
+            <Icon
+              name="mail"
+              size={50}
+              class="justify-self-center relative top-3"
+            />
+          </a>
+          <a href="tel:+4915788644558" class="social-btn" target="_blank">
+            <Icon
+              name="phone"
+              size={45}
+              class="justify-self-center relative top-3"
+            />
+          </a>
+        </div>
+      </div>
+      <div class="aboutme-description retro-font">
+      </br>Hi, I'm Emma!</br></br> I recently graduated with a Bachelor's in Business
+        Informatics and will be starting my Master's this April.</br></br> A bit about
+        my journey: Growing up, I loved watching my dad work on his computer. You could say I was very familiar with computers since I was little.</br></br>Fast forward to today, and I’ve got a toolkit filled
+        with experiences from university projects, personal side hustles, and
+        working student jobs.</br>These experiences have honed my skills in both tech and business, allowing me to tackle a wide range of challenges.</br></br> 
+        Feel free to explore more about my skills and projects and let’s connect!
+      </div>
+    </div>
   </div>
 
   <style>
@@ -42,10 +81,51 @@ import { Icon } from "astro-icon/components";
       height: 100%;
       z-index: -1;
     }
+    .retro-font {
+      font-family: "Press Start 2P", serif;
+    }
+    .win95-block {
+      width: 1200px;
+      height: 600px;
+      background: #c0c0c0;
+      border: 2px solid;
+      border-bottom-color: #404040;
+      border-right-color: #404040;
+      border-left-color: #fff;
+      border-top-color: #fff;
+      box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.1);
+      margin: 16px;
+    }
+
+    .win95-title {
+      background: linear-gradient(90deg, #55085f, #c07baf);
+      padding: 3px 2px 3px 3px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      min-height: 24px;
+    }
+    .win95-button {
+      background: #c0c0c0;
+      border: 2px solid;
+      border-top-color: #fff;
+      border-left-color: #fff;
+      border-bottom-color: #404040;
+      border-right-color: #404040;
+      padding: 2px 6px;
+      min-width: 24px;
+      min-height: 20px;
+      font-size: clamp(10px, 2.5vw, 12px);
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     .polaroid-outer {
       background-color: rgb(255, 255, 255);
       width: 350px;
-      height: 420px;
+      height: 490px;
     }
 
     .polaroid-inner {
@@ -53,14 +133,10 @@ import { Icon } from "astro-icon/components";
       height: 300px;
     }
 
-    .retro-font {
-      font-family: "Press Start 2P", serif;
-    }
-
     .social-btn {
-      width: 100px;
-      height: 100px;
-      background-color: #f54bae;
+      width: 70px;
+      height: 70px;
+      background-color: #e2aee2;
       align-items: center;
       justify-content: center;
       clip-path: polygon(
@@ -73,6 +149,12 @@ import { Icon } from "astro-icon/components";
         0% 70%,
         0% 30%
       );
+      :hover {
+        color: rgb(245, 229, 241);
+      }
+    }
+
+    .aboutme-description {
     }
   </style>
 </section>
