fixed skill button css

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -3,7 +3,9 @@
 ---
 
 <section class="min-h-screen bg-[#705670] grid place-items-center px-4 py-8">
-  <div class="title retro-font text-5xl text-[#ff9ef0] pt-16">SKILLS & TOOLS</div>
+  <div class="title retro-font text-5xl text-[#ff9ef0] pt-16">
+    SKILLS & TOOLS
+  </div>
   <div class="flex flex-col items-center mt-8">
     <section
       class="relative bg-[#09161D] shadow-[0_5px_35px_rgb(9,22,29)] h-[600px] w-[750px]
@@ -12,30 +14,34 @@
       <div class="retro-font text-2xl text-[#ff9ef0] col-span-4 text-center">
         My Deck
       </div>
-      <button class="custom-button retro-font active text-[0.6rem]">JS/TS</button>
-      <button class="custom-button retro-font text-[0.6rem]">HTML</button>
-      <button class="custom-button retro-font text-[0.6rem]">CSS/SCSS</button>
-      <button class="custom-button retro-font text-[0.6rem]">C</button>
-      <button class="custom-button retro-font text-[0.6rem]">C#</button>
-      <button class="custom-button retro-font text-[0.6rem]">React</button>
-      <button class="custom-button retro-font text-[0.6rem]">Java</button>
-      <button class="custom-button retro-font text-[0.6rem]">Tailwind CSS</button>
-      <button class="custom-button retro-font text-[0.6rem]">Vue.js</button>
-      <button class="custom-button retro-font text-[0.6rem]">Blazor</button>
-      <button class="custom-button retro-font text-[0.6rem]">PHP</button>
-      <button class="custom-button retro-font text-[0.6rem]">Python</button>
-      <button class="custom-button retro-font text-[0.6rem]">Django</button>
-      <button class="custom-button retro-font text-[0.6rem]">Docker</button>
-      <button class="custom-button retro-font text-[0.6rem]">GitHub</button>
-      <button class="custom-button retro-font text-[0.6rem]">Azure</button>
-      <button class="custom-button retro-font text-[0.6rem]">Typo3</button>
-      <button class="custom-button retro-font text-[0.6rem]">Wordpress</button>
-      <button class="custom-button retro-font text-[0.6rem]">SQL</button>
-      <button class="custom-button retro-font text-[0.6rem]">Bootstrap</button>
-      <button class="custom-button retro-font text-[0.6rem]">Laravel</button>
-      <button class="custom-button retro-font text-[0.6rem]">Next.js</button>
-      <button class="custom-button retro-font text-[0.6rem]">Postman</button>
-      <button class="custom-button retro-font text-[0.6rem]">Figma</button>
+      <button class="custom-button retro-font active"
+        >JS/TS</button
+      >
+      <button class="custom-button retro-font">CSS/SCSS</button>
+      <button class="custom-button retro-font">HTML</button>
+      <button class="custom-button retro-font">C</button>
+      <button class="custom-button retro-font">C#</button>
+      <button class="custom-button retro-font">React</button>
+      <button class="custom-button retro-font">Java</button>
+      <button class="custom-button retro-font"
+        >Tailwind CSS</button
+      >
+      <button class="custom-button retro-font">Vue.js</button>
+      <button class="custom-button retro-font">Blazor</button>
+      <button class="custom-button retro-font">PHP</button>
+      <button class="custom-button retro-font">Python</button>
+      <button class="custom-button retro-font">Django</button>
+      <button class="custom-button retro-font">Docker</button>
+      <button class="custom-button retro-font">GitHub</button>
+      <button class="custom-button retro-font">Azure</button>
+      <button class="custom-button retro-font">Typo3</button>
+      <button class="custom-button retro-font">Wordpress</button>
+      <button class="custom-button retro-font">SQL</button>
+      <button class="custom-button retro-font">Bootstrap</button>
+      <button class="custom-button retro-font">Laravel</button>
+      <button class="custom-button retro-font">Next.js</button>
+      <button class="custom-button retro-font">Postman</button>
+      <button class="custom-button retro-font">Figma</button>
       <div class="streamdeck-logo"></div>
     </section>
   </div>
@@ -45,10 +51,9 @@
 
     .retro-font {
       font-family: "Press Start 2P", serif;
-
     }
-    .title{
-        text-shadow: 0.08em 0.08em #111fe4;
+    .title {
+      text-shadow: 0.08em 0.08em #111fe4;
     }
 
     .custom-button {
@@ -57,6 +62,7 @@
                  transition-all duration-200 
                  px-2 py-1 
                  shadow-[1px_1px_0px_#424,1px_2px_0px_#424,1px_3px_0px_#424,1px_4px_0px_#424,1px_5px_0px_#424,1px_6px_0px_#424,1px_7px_0px_#424];
+                 font-size: 0.6rem
     }
 
     .custom-button.active {
