add snap-scroll, television-projects, deck responsive

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -2,8 +2,8 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<section class="min-h-screen bg-[#c07bc0] pt-16">
-  <div class="title retro-font justify-self-center text-5xl text-[#ff9ef0]">ABOUT ME</div>
+<section class="min-h-screen snap-start">
+  <div class="title retro-font justify-self-center text-5xl text-[#ff9ef0] pt-16">ABOUT ME</div>
   <div class="win95-block w-[90%] max-w-[1200px] pb-4">
     <div class="win95-title flex items-center content-between min-h-6">
       <button class="win95-button ml-auto retro-font min-w-6 min-h-5 cursor-pointer inline-flex items-center content-center">x</button>
