--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,5 +1,5 @@
 
-    <section class="min-h-screen content-center">
+    <section class="min-h-screen content-center snap-start">
       <div class="flex flex-col justify-items-center">
 		<div class="justify-items-center">
 			<h1 class="title-retro title-retro-shadow text-5xl md:text-9xl">
