--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -7,7 +7,7 @@
     <section
       class="relative bg-[#09161D] shadow-[0_5px_35px_rgb(9,22,29)]
         w-full max-w-[1000px] min-h-[500px]
-        grid grid-cols-4 sm:grid-cols-4 md:grid-cols-4 lg:grid-cols-6
+        grid grid-cols-4 xs:grid-cols-2 sm:grid-cols-4 md:grid-cols-4 lg:grid-cols-6
         gap-4 p-4 md:p-8
         rounded-[15px]
         justify-items-center"
@@ -63,9 +63,9 @@
       font-size: 0.5rem;
     }
 
-    @media (min-width: 768px) {
+    @media (min-width: 1024px) {
       .custom-button {
-        font-size: 0.6rem;
+        font-size: 0.7rem;
       }
     }
 
