--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,9 +10,8 @@
     </div>
     <div class="television__center">
       <div class="television__screen">
-        <iframe
-          src="https://www.youtube.com/embed/SRu6YRr1KtM"
-          allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/SRu6YRr1KtM" allowfullscreen
+        ></iframe>
       </div>
       <div class="television__channels-wrapper content-center">
         <ul class="television__channels">
@@ -217,6 +216,70 @@
 
   .tv-wrapper .p {
     margin-top: 70px;
+  }
+
+  @media (max-width: 820px) {
+    .tv-wrapper .television__screen  {
+      width: 430px;
+      height: 315px;
+    }
+    .tv-wrapper .television__center {
+      width: 570px;
+      height: 340px;
+    }
+  }
+
+  @media (max-width: 595px) {
+    .tv-wrapper .television__screen  {
+      width: 430px;
+      height: 315px;
+    }
+    .tv-wrapper .television__center {
+      width: 570px;
+      height: 340px;
+    }
+  }
+
+  @media (min-width: 525px) and (max-width: 595px) {
+    .tv-wrapper .television__screen  {
+      width: 400px;
+      height: 280px;
+    }
+    .tv-wrapper .television__center {
+      width: 500px;
+      height: 300px;
+    }
+    .tv-wrapper .television {
+      width: 545px;
+    }
+
+    .tv-wrapper .television__channels-wrapper {
+      width: 42px;
+      height: 270px;
+    }
+  }
+
+  @media (max-width: 525px) {
+    .tv-wrapper .television__screen  {
+      width: 221px;
+      height: 207px;
+    }
+    .tv-wrapper .television__center {
+      width: 330px;
+      height: 235px;
+    }
+    .tv-wrapper .television__channels-wrapper {
+      width: 62px;
+      height: 205px;
+    }
+    .tv-wrapper .television__channel{
+      width: 20px;
+      height: 20px;
+    }
+    .tv-wrapper .television {
+      width: 390px;
+    }
+
   }
 </style>
 <script is:inline>
