--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -15,30 +15,30 @@
       <div class="retro-font text-2xl text-[#ff9ef0] col-span-full text-center">
         My Deck
       </div>
-      <button class="custom-button retro-font active">JS/TS</button>
-      <button class="custom-button retro-font">CSS/SCSS</button>
-      <button class="custom-button retro-font">HTML</button>
-      <button class="custom-button retro-font">PHP</button>
-      <button class="custom-button retro-font">Java</button>
-      <button class="custom-button retro-font">C</button>
-      <button class="custom-button retro-font">C#</button>
-      <button class="custom-button retro-font">Python</button>
-      <button class="custom-button retro-font">SQL</button>
-      <button class="custom-button retro-font">Tailwind CSS</button>
-      <button class="custom-button retro-font">React</button>
-      <button class="custom-button retro-font">Vue.js</button>
-      <button class="custom-button retro-font">Blazor</button>
-      <button class="custom-button retro-font">Django</button>
-      <button class="custom-button retro-font">Bootstrap</button>
-      <button class="custom-button retro-font">Laravel</button>
-      <button class="custom-button retro-font">Next.js</button>
-      <button class="custom-button retro-font">Docker</button>
-      <button class="custom-button retro-font">GitHub</button>
-      <button class="custom-button retro-font">Postman</button>
-      <button class="custom-button retro-font">Figma</button>
-      <button class="custom-button retro-font">Azure</button>
-      <button class="custom-button retro-font">Typo3</button>
-      <button class="custom-button retro-font">Wordpress</button>
+      <button class="custom-button active">JS/TS</button>
+      <button class="custom-button">CSS/SCSS</button>
+      <button class="custom-button">HTML</button>
+      <button class="custom-button">PHP</button>
+      <button class="custom-button">Java</button>
+      <button class="custom-button">C</button>
+      <button class="custom-button">C#</button>
+      <button class="custom-button">Python</button>
+      <button class="custom-button">SQL</button>
+      <button class="custom-button">Tailwind CSS</button>
+      <button class="custom-button">React</button>
+      <button class="custom-button">Vue.js</button>
+      <button class="custom-button">Blazor</button>
+      <button class="custom-button">Django</button>
+      <button class="custom-button">Bootstrap</button>
+      <button class="custom-button">Laravel</button>
+      <button class="custom-button">Next.js</button>
+      <button class="custom-button">Docker</button>
+      <button class="custom-button">GitHub</button>
+      <button class="custom-button">Postman</button>
+      <button class="custom-button">Figma</button>
+      <button class="custom-button">Azure</button>
+      <button class="custom-button">Typo3</button>
+      <button class="custom-button">Wordpress</button>
     </section>
   </div>
 
@@ -61,6 +61,7 @@
              lg:w-28 lg:h-28
              shadow-[1px_1px_0px_#424,1px_2px_0px_#424,1px_3px_0px_#424,1px_4px_0px_#424,1px_5px_0px_#424,1px_6px_0px_#424,1px_7px_0px_#424];
       font-size: 0.5rem;
+      font-family: "Press Start 2P", serif;
     }
 
     @media (min-width: 1024px) {
