--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import AboutMe from "../components/AboutMe.astro";
 import Skills from "../components/Skills.astro";
 import background from "../assets/background.png";
 import Projects from "../components/Projects.astro";
+import Career from "../components/Career.astro";
 ---
 
 <Layout>
@@ -14,6 +15,7 @@ import Projects from "../components/Projects.astro";
     <AboutMe />
     <Skills />
     <Projects />
+    <Career />
   </div>
 </Layout>
 
